styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #f8f8f8;
  overflow-x: hidden;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

ol,
ul {
  list-style: none;
}

/* Navbar Section */

nav {
  position: fixed;
  height: 10%;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 25px;
  background-color: white;
  z-index: 100;
}

.menu__container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.toggle__menu {
  display: none;
  justify-content: center;
  align-items: center;
  height: 100%;
  cursor: pointer;
}

.toggle__menu i {
  display: none;
  z-index: 1000;
}

.toggle__menu i.active {
  position: absolute;
  display: block;
  font-size: 2.5rem;
}

.responsive__menu {
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  left: -200%;
  justify-content: center;
  align-items: center;
  background-color: #FFF;
  transition: 0.5s all ease;
}

.responsive__menu.active {
  left: 0;
}

.responsive__menu ul {
  height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center; 
}

.responsive__menu li a {
  font-size: 2.5rem;
}

.title {
  font-size: 1.5rem;
  text-transform: uppercase;
  font-weight: 900;
}

.full__menu {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu__container span {
  margin: 0 10px;
}

.menu__item {
  color: #ccc;
  font-weight: bolder;
  text-transform: uppercase;
  transition: 0.5s all ease;
  font-size: 1rem;
}

.menu__item.active {
  color: #000;
}

.menu__item:hover {
  color: #000;
  transition: 0.5s all ease;
}

.socials__container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.socials__container ul {
  display: flex;
  align-items: center;
}

.socials__container i {
  font-size: 2rem;
  color: #000;
  margin: 20px;
  transition: 0.5s all ease;
}

.socials__container i:hover {
  color: #ccc;
  transition: 0.5s all ease;
}

/* Header Section */

header {
  height: 100vh;
  width: 100%;
  position: relative;
  overflow: hidden;
}

header img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0.8;
}

.hero__container {
  width: 100%;
  height: 15%;
  background-color: white;
  position: absolute;
  top: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 25px;
}

.hero__title__container {
  height: 100%;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero__title {
  color: #ccc;
}

.hero__description__container {
  flex: 1;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 60%;
}

.hero__description__text {
  font-size: 0.8rem;
  letter-spacing: 1px;
}

.hero__cta__container {
  height: 100%;
  width: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero__cta__container a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero__cta__container i {
  font-size: 3rem;
  color: #000;
  transition: 0.5s all ease;
}

.hero__cta__container p {
  color: #000;
  transition: 0.5s all ease;
}

.hero__cta__container a:hover i,
.hero__cta__container a:hover p {
  color: #ccc;
  transition: 0.5s all ease;
}

/* Music Section */

section {
  padding: 50px;
  width: 100%;
  min-height: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.section__title {
  padding-bottom: 10px;
  border-bottom: 1px solid #000;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.music__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 50px;
}

.music__box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 10px;
}

.music__title {
  font-size: 0.8rem;
  font-weight: bolder;
  text-transform: uppercase;
  text-align: center;
  width: 100%;
}

.music__artist {
  font-size: 0.7rem;
}

.music__cta {
  border-radius: 8px;
  color: #000;
  font-weight: bolder;
  padding: 20px;
  background-color: #ccc;
}

/* News Section */

.news__container {
  width: 80%;
  display: flex;
  flex-direction: column;
  margin: 50px;
}

.news__item {
  display: flex;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  padding-bottom: 20px;
  margin-bottom: 20px;
}

.news__item:last-child {
  border: none;
}

.news__headline {
  width: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
}

.news__description {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 0.8rem;
  width: 70%;
}

.news__cta {
  width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #000;
  font-size: 0.8rem;
  font-weight: bolder;
  border-radius: 8px;
  background-color: #ccc;
  padding: 5px;
}

/* Gallery Section */

.gallery__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 50px;
}

.gallery__container img {
  height: 200px;
  width: 200px;
  margin: 10px;
  object-fit: cover;
}

/* About Us Section */

.about__container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 50px;
  width: 80%;
}

.about__container img {
  height: 340px;
  width: 340px;
  object-fit: cover;
}

.about__text {
  margin: 20px;
  font-size: 0.8rem;
  letter-spacing: 1px;
}

/* Shop Section */

.shop__container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 50px;
  width: 80%;
}

.shop__item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 50px;
}

.shop__item img {
  height: 300px;
  width: 300px;
  object-fit: cover;
}

.shop__title {
  font-size: 1.2rem;
  font-weight: bolder;
}

.shop__description {
  font-size: 0.8rem;
}

/* Contact Section */

.contact__container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 50px;
  width: 80%;
}

.contact__container p {
  text-align: center;
}

.contact__container ul {
  width: 50%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 50px;
}

.contact__container ul li {
  font-size: 4rem;
}

.contact__container ul li a { 
  color: #000;
  transition: 0.5s all ease;
}

.contact__container ul li:hover a { 
  color: #CCC;
  transition: 0.5s all ease;
}

/* Footer Section */

footer {
  background-color: white;
  width: 100%;
  height: 10vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly; 
  align-items: center;
}

.copyright {
  font-size: 1rem;
  color: #000;
}

.creator {
  font-size: 0.75rem;
  color: #000;
}

.creator a {
  font-weight: bolder;
  color: #000;
}

/* Media Queries */

@media only screen and (max-width: 768px) {
  
  .title {
    font-size: 1rem;
  }
  
  .menu__container {
    width: 80%;
  }

  .full__menu {
    display: none;
  }

  .socials__container {
    display: none;
  }

  .toggle__menu {
    display: flex;
  }

  .responsive__menu { 
    display: flex;
  }

  header img {
    position: absolute;
    top: 10%;
    height: 70%;
    object-position: 40%;
  }

  .hero__container {
    height: 20%;
    position: absolute;
    bottom: 0;
    padding: 0;
  }

  .hero__description__container {
    display: none;
  }

  .hero__cta__container p {
    font-size: 0.8rem;
  }

  .news__item {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .news__item * {
    margin: 10px 0;
  }

  .news__cta {
    width: 50%;
  }

  .about__container img {
    display: none;
  }

  .about__text {
    text-align: center;
  }

  .shop__container {
    flex-direction: column;
  }

  .contact__container ul {
    width: 100%;
  }

  .contact__container ul li a {
    font-size: 3rem;
  }

  .copyright {
    font-size: 0.8rem;
  }
}

